# SNT_KAN_CNN

./: .gitignore  c.py  justfile  monitor_gpu.sh  pyproject.toml  tensorboard.sh
docs/: VALIDATION_VS_TEST_ISSUE.md
raport/: training_metrics.csv
raport/tensorboard/KAN_FAST/: events.out.tfevents.1760713165.b5f639ec9ddf.1990.0  hparams.yaml
raport/tensorboard/densenet121/: events.out.tfevents.1760716914.b5f639ec9ddf.6263.0  hparams.yaml
raport/tensorboard/efficientnet_b0/: events.out.tfevents.1760720046.b5f639ec9ddf.8726.0  hparams.yaml
raport/tensorboard/mobilenet_v2/: events.out.tfevents.1760718759.b5f639ec9ddf.7539.0  hparams.yaml
raport/tensorboard/resnet50/: events.out.tfevents.1760713779.b5f639ec9ddf.3636.0  hparams.yaml
raport/tensorboard/vgg16/: events.out.tfevents.1760714992.b5f639ec9ddf.4959.0  hparams.yaml
raport/tensorboard/vit_b_16/: events.out.tfevents.1760721591.b5f639ec9ddf.10016.0  hparams.yaml
src/config/: config.yaml
src/data_processing/: data_processor.py
src/models/: diat_cnn.py  diat_kan.py  features_extractor.py  snt_cnn.py
src/scripts/: analyze_data.py  estimate_model_sizes.py  generate_report.py  get_sar_data.py  prepare_data.py  test.py  train.py
tensorboards/tensorboard/densenet121_TEST/: events.out.tfevents.1761071119.5430618e9099.4969.0
tensorboards/tensorboard/efficientnet_b0_TEST/: hparams.yaml:Zone.Identifier
tensorboards/tensorboard/efficientnet_b0_sar_1/: events.out.tfevents.1761050728.5430618e9099.4424.0  hparams.yaml
tensorboards/tensorboard/mobilenet_v2_TEST/: hparams.yaml  (+1 more)
(+87 files in other folders)
